--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign-Up | binaryBloom</title>
+    <title>Sign Up | binaryBloom</title>
     
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -78,12 +78,12 @@
             <div class="row mt-4">
                 <div class="col-md-6 mb-2">
                     <button onclick="window.location.href='dashboard.html';" type="button" class="btn btn-dark w-100">
-                        <i class="bi bi-google me-2"></i>Continue with Google
+                        <i class="bi bi-google me-2"></i> Sign up with Google
                     </button>
                 </div>
                 <div class="col-md-6 mb-2">
                     <button onclick="window.location.href='dashboard.html';" type="button" class="btn btn-dark w-100">
-                        <i class="bi bi-github me-2"></i>Continue with Github
+                        <i class="bi bi-facebook me-2"></i> Sign up with FB
                     </button>
                 </div>
             </div>
@@ -102,5 +102,6 @@
 
     <!-- Personal JavScript File -->
     <script src="scripts.js"></script>
+    <script type="module" src="firebase.js"></script>
 </body>
 </html>
