--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up | binaryBloom</title>
+    <title>Sign-Up | binaryBloom</title>
     
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -102,6 +102,78 @@
 
     <!-- Personal JavScript File -->
     <script src="scripts.js"></script>
-    <script type="module" src="firebase.js"></script>
+    <!-- <script type="module" src="firebase.js"></script> -->
+     <script type="module">
+        // Import Firebase SDK functions
+import { initializeApp } from "https://www.gstatic.com/firebasejs/11.5.0/firebase-app.js";
+import { 
+    getAuth, 
+    createUserWithEmailAndPassword, 
+    signInWithEmailAndPassword 
+} from "https://www.gstatic.com/firebasejs/11.5.0/firebase-auth.js";
+
+// Firebase configuration
+const firebaseConfig = {
+    apiKey: "AIzaSyCM22aIXGhkuV1K6UVOe4DRIi3kDkSSn6o",
+    authDomain: "binarybloom-7c450.firebaseapp.com",
+    projectId: "binarybloom-7c450",
+    storageBucket: "binarybloom-7c450.firebasestorage.app",  
+    messagingSenderId: "655041968048",
+    appId: "1:655041968048:web:a92b86179521bf0a660875",
+    measurementId: "G-C3K9D7C9F1"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+
+document.addEventListener("DOMContentLoaded", function () {
+
+    const signUpForm = document.getElementById("form1");
+    if (signUpForm) {
+        signUpForm.addEventListener("submit", async (event) => {
+            event.preventDefault();
+            const email = document.getElementById("email").value;
+            const password = document.getElementById("password").value;
+
+            if (!email || !password) {
+                alert("Please enter both email and password!");
+                return;
+            }
+
+            try {
+                await createUserWithEmailAndPassword(auth, email, password);
+                alert("Sign-up successful! Redirecting to dashboard...");
+                window.location.href = "dashboard.html";
+            } catch (error) {
+                alert("Error: " + error.message);
+            }
+        });
+    }
+
+    const signInButton = document.getElementById("subbtn");
+    if (signInButton) {
+        signInButton.addEventListener("click", async (event) => {
+            event.preventDefault();
+            const email = document.getElementById("email").value;
+            const password = document.getElementById("password").value;
+
+            if (!email || !password) {
+                alert("Please enter both email and password!");
+                return;
+            }
+
+            try {
+                await signInWithEmailAndPassword(auth, email, password);
+                alert("Login successful! Redirecting to dashboard...");
+                window.location.href = "dashboard.html";
+            } catch (error) {
+                alert("Error: " + error.message);
+            }
+        });
+    }
+});
+
+     </script>
 </body>
 </html>
